fixed pagination style and page layout problem

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,6 +15,7 @@ html {
 body {
   margin: 0px;
   padding: 0px;
+  min-height: 100dvh;
 }
 
 nav {
@@ -38,6 +39,22 @@ nav>div+div{
   flex-direction: row;
   align-items: center;
   gap: 15px;
+}
+
+footer{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 25px;
+  padding-top: 15px;
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  min-height: 100dvh;
+  justify-content: space-between;
 }
 
 .gridCont {
@@ -149,6 +166,40 @@ button {
 }
 
 .githubIcon {
-  width: 35px;
-  height: 35px;
+  width: 30px;
+  height: 30px;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  padding-left: 0;
+  list-style: none;
+  margin-top: 20px;
+}
+
+.pagination li {
+  margin: 0 5px;
+}
+
+.pagination li a {
+  display: inline-block;
+  padding: 10px 15px;
+  background-color: white;
+  color: #6366f1;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.pagination li a:hover {
+  background-color: #6366f1;
+  color: white;
+}
+
+.pagination li.active a {
+  background-color: #6366f1;
+  color: white;
+  border-color: #6366f1;
 }
